# repo_analyst_agent

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/repo_analyst/: __init__.py  models.py  tool_call.py  tool_result.py
src/repo_analyst/agent/: __init__.py  agent.py  agent_state.py
src/repo_analyst/agent/summarizers/: file_summarizer.py
src/repo_analyst/database/: agent_finding_repository.py  agent_run_repository.py  database.py  file_embedding_repository.py  file_summary_repository.py  init_db.py  models.py
src/repo_analyst/indexer/: repository_indexer.py  start_bg_index.py
src/repo_analyst/llm/: answer_generator.py  embeddings_client.py  file_summariser.py  llm_client.py
src/repo_analyst/logging/: spinner.py
src/repo_analyst/planner/: hardcoded_planner.py  planner.py  query_extractor.py
src/repo_analyst/retrieval/: hybrid_ranker.py  repository_retriever.py
src/repo_analyst/scratch/: agent_test.py  export_repository_data.py  test_agent_run_repository.py  test_embeddings.py  test_embeddings_search.py  test_file_summary_repository.py  test_summary_search.py  test_tools.py
src/repo_analyst/search/: cosine_similarity.py  embeddings_search.py  summary_search.py
src/repo_analyst/tools/: __init__.py  list_files.py  read_file.py  search_text.py  tools_registry.py
