[project]
name = "repo-analyst-agent"
version = "0.1.0"
description = "Agent for analysing repositories and providing insights."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ai-provider",
    "asyncpg",
    "sqlalchemy",
    "requests",
    "greenlet",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*tests", "*test"]

[tool.uv.sources]
ai-provider = { path = "../ai_platform/packages/ai-provider", editable = true }